[python3] add cython evdev gpiod pyserial

--- a/lang/python3-gpiod/Makefile
+++ b/lang/python3-gpiod/Makefile
@@ -1,5 +1,5 @@
 #
-# Copyright (C) 2007-2014 OpenWrt.org
+# Copyright (C) 2019-2O20 CZ.NIC, z. s. p. o. (https://www.nic.cz/)
 #
 # This is free software, licensed under the GNU General Public License v2.
 # See /LICENSE for more information.
@@ -7,14 +7,14 @@
 
 include $(TOPDIR)/rules.mk
 
-PKG_NAME:=python3-cython
-PKG_VERSION:=0.29.2
-PKG_RELEASE:=1
-PKG_LICENSE:=Apache
+PKG_NAME:=python3-gpiod
+PKG_VERSION:=1.5.0
+PKG_RELEASE:=2
 
-PKG_SOURCE:=Cython-$(PKG_VERSION).tar.gz
+PKG_SOURCE:=gpiod-$(PKG_VERSION).tar.gz
+PKG_SOURCE_URL:=https://github.com/junhuanchen/python3-gpiod/files/6447504/
 
-PKG_BUILD_DIR:=$(COMPILE_DIR)/Cython-$(PKG_VERSION)
+PKG_BUILD_DIR:=$(COMPILE_DIR)/gpiod-$(PKG_VERSION)
 
 include $(BUILD_DIR)/package.mk
 $(call include_mk, python3-package.mk)
@@ -23,19 +23,20 @@ define Package/$(PKG_NAME)
   SUBMENU:=Python
   SECTION:=lang
   CATEGORY:=Languages
-  TITLE:=python3 Cython
-  DEPENDS:= +python3
-  URL:=https://cython.org/
-endef
-
-define Package/$(PKG_NAME)/description
-Cython is an optimising static compiler for both the Python programming language and the extended Cython programming language (based on Pyrex).
+  TITLE:=gpiod implementation in Python
+  URL:=https://python-gpiod.github.io/
+  DEPENDS:= \
+	  +python3-light
 endef
 
 define Build/Compile
 	$(call Build/Compile/Py3Mod,,\
-		install --root="$(PKG_INSTALL_DIR)" --prefix="/usr" \
+    install --root="$(PKG_INSTALL_DIR)" --prefix="/usr" --single-version-externally-managed \
 	)
+endef
+
+define Package/$(PKG_NAME)/description
+  A fast and complete Python implementation of gpiod.
 endef
 
 define Py3Package/$(PKG_NAME)/filespec
